début de l'index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title></title>
-    </head>
-    <body>
-    
-    </body>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Accueil - Site de Rencontre</title>
+    <link rel="stylesheet" href="css/style.css"> <!-- Lien vers votre feuille de style CSS -->
+</head>
+<body>
+    <header>
+        <h1>Bienvenue sur notre site de rencontre</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Inscription</a></li>
+                <li><a href="#">À propos</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <h2>Rencontrez votre partenaire idéal</h2>
+        <p>Rejoignez notre communauté dès aujourd'hui et trouvez la personne qui vous correspond.</p>
+        <button><a href="connexion.php">Connexion</a></button> <!-- Bouton de connexion -->
+    </main>
+
+    <footer>
+        <div class="footer-nav">
+                <ul>
+                    <li><a href="#">Mentions légales</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+        </div>
+        <div class="copyright">
+            <p>&copy; 2024 Site de Rencontre - Tous droits réservés</p>
+        </div>
+    </footer>
+</body>
 </html>
