création d'un fichier css juste pour l'index et quelque truc

--- a/index.html
+++ b/index.html
@@ -3,26 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil - Site de Rencontre</title>
-    <link rel="stylesheet" href="css/style.css"> <!-- Lien vers votre feuille de style CSS -->
+    <title>Accueil non connecté - Site de Rencontre</title>
+    <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur notre site de rencontre</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">Inscription</a></li>
-                <li><a href="#">À propos</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <img src="img/logo.png" alt="Logo du site" id="LogoSite">
+        <h1>Bienvenue sur le site de rencontre  idéal</h1>
     </header>
 
     <main>
-        <h2>Rencontrez votre partenaire idéal</h2>
-        <p>Rejoignez notre communauté dès aujourd'hui et trouvez la personne qui vous correspond.</p>
-        <button><a href="connexion.php">Connexion</a></button> <!-- Bouton de connexion -->
+        <h2>Rencontrez votre partenaire de vie</h2>
+        <a href="connexion.php" class="bouton">Connexion</a>
+        <a href="Inscription.php" class="bouton">Inscription</a>
+
     </main>
 
     <footer>
