--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accueil non connecté - Site de Rencontre</title>
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <header>
