--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.png" alt="Logo du site" id="LogoSite">
-        <h1>Bienvenue sur le site de rencontre  idéal</h1>
+        <img src="css/img/logo.png" alt="Logo du site" id="LogoSite">
+        <h1>StarLove</h1>
     </header>
 
     <main>
         <h2>Rencontrez votre partenaire de vie</h2>
         <a href="connexion.php" class="bouton">Connexion</a>
-        <a href="Inscription.php" class="bouton">Inscription</a>
+        <a href="inscription.php" class="bouton">Inscription</a>
 
     </main>
 
