style graphique de index connexion et inscription

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 </head>
 <body>
     <header>
-        <img src="css/img/logo.png" alt="Logo du site" id="LogoSite">
+        <a href="accueilUtilisateur.php">
+            <img src="css/img/logo.png" alt="Logo du site" id="LogoSite">
+        </a>
         <h1>StarLove</h1>
     </header>
 
     <main>
         <h2>Rencontrez votre partenaire de vie</h2>
-        <a href="connexion.php" class="bouton">Connexion</a>
-        <a href="inscription.php" class="bouton">Inscription</a>
-
+        <div class="bouton">
+            <a href="connexion.php" class="bouton">Connexion</a>
+            <a href="inscription.php" class="bouton">Inscription</a>
+        </div>
     </main>
 
     <footer>
